add photo pages

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,3 +2,6 @@ $color: rgb(24, 43, 69);
 $text-color: rgb(200, 227, 255);
 $text-color-dark: rgb(4, 28, 52);
 $white: rgb(255, 255,255);
+$gray-soft: #eee;
+$gray-medium: #ddd;
+$gray-text: #666;
