--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
 	<link rel="shortcut icon" type="image/png" href="http://wes.io/ehRe/my-favourite-icon.png"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>REDUX STARTER</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="dist/css/vendor-styles.css" />
 	<link rel="stylesheet" href="dist/css/styles.css" />
 
