--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script src="../dist/js/bundle.js"></script>
+	<script src="../dist/js/bundle.min.js"></script>
 </body>
 </html>
