--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
 	<div id="app"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
 	<script src="../dist/js/bundle.min.js"></script>
+  <script type="text/javascript">
+    var ws = io('wss://localhost:4002', {});
+    ws.emit('chat message','HELLO FROM IO');
+    ws.on('chat message', function(msg){
+      console.log(msg);
+    });
+  </script>
 </body>
 </html>
